Updates on the roles and permissions and seeders
